# simplepypkg

./: .gitattributes  MANIFEST.in  setup.cfg
simplepypkg/: __init__.py  _version.py  calc.py
simplepypkgtest/: __init__.py  _version.py
