[metadata]
name = simplepypkg
author = tetsuzawa <tetsu.takizawa5@gmail.com>
author_email = tetsu.takizawa5@gmail.com
url = https://github.com/tetsuzawa/simplepypkg
project_urls =
    Source Code = https://github.com/tetsuzawa/simplepypkg
    Bug Tracker = https://github.com/tetsuzawa/simplepypkg
license = MIT
license_file = LICENSE
description = A simple python pkg for testing.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
python_requires = >=3.6

[bdist_wheel]
universal = 1

[versioneer]
VCS = git
style = pep440
versionfile_source = simplepypkg/_version.py
versionfile_build = simplepypkg/_version.py
tag_prefix = ''
